objects/ASI_MFM_Payment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_AC_Remark__c</fullName>
        <description>MY Use</description>
        <label>A/C Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active AP Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_AP_Code__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Remark__c</fullName>
        <label>AP Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Adjustment_Amount__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c+ASI_MFM_VAT_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_with_Tax__c</fullName>
        <formula>IF(Contains( RecordType.DeveloperName,&apos;ASI_MFM_PH&apos;) ,ASI_MFM_Payment_Amount__c *(1+ ASI_MFM_PO__r.ASI_MFM_VAT__c ) 
,  IF(Contains( RecordType.DeveloperName,&apos;ASI_MFM_KR&apos;) , ASI_MFM_Payment_Amount__c * ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c , ASI_MFM_Payment_Amount__c *(1+ ASI_MFM_Payment__r.ASI_MFM_VAT_Rate__c)) )</formula>
        <label>Amount with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BC_Code__c</fullName>
        <label>BC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Allocation</label>
        <referenceTo>ASI_MFM_BU_Allocation__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active BU Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_BU__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Beneficiary_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficiary Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Line Items (Beneficiary Customer)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Business_Unit__c</fullName>
        <label>Branch/Plant</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_MFM_Company__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>P830</fullName>
                </value>
                <value>
                    <fullName>J520</fullName>
                </value>
                <value>
                    <fullName>J530</fullName>
                </value>
                <value>
                    <fullName>J540</fullName>
                </value>
                <value>
                    <fullName>J550</fullName>
                </value>
                <value>
                    <fullName>J560</fullName>
                </value>
                <value>
                    <fullName>J570</fullName>
                </value>
                <value>
                    <fullName>J580</fullName>
                </value>
                <value>
                    <fullName>J590</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_POLineAmount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_PrePaid_Amount_in_PO_Currency__c</fullName>
        <label>PrePaid Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Pre_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cashout_Payment_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Out Payment Number</label>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>Payment Line Items (Cash Out Payment Number)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRK</fullName>
                </value>
                <value>
                    <fullName>PRKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Complete_POL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete POL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Complete_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete PO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency_Sys__c</fullName>
        <description>for CN payment line item input page display only</description>
        <label>Currency Sys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <formula>Text(ASI_MFM_Payment__r.ASI_MFM_Currency__c)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_DistributorAmount_in_POCurrency__c</fullName>
        <label>Distributor Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Effective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Finance_Verify_Save_Date__c</fullName>
        <label>Finance Verify Save Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Paid_Amount_in_PO_Currency__c</fullName>
        <label>Paid Amount in PO Currency (PR Gulf)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Payment_Amount_Include_VAT__c</fullName>
        <label>Payment Amount (Include VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Payment_Amount_PR_Gulf__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c -  ASI_MFM_Payment_Amount_Distributor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount (PR Gulf)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_VAT_Amount__c</fullName>
        <formula>ASI_MFM_GF_Payment_Amount_Include_VAT__c - ASI_MFM_GF_Payment_Amount_PR_Gulf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VAT5 (5%)</fullName>
                </value>
                <value>
                    <fullName>VAT0 (0%)</fullName>
                </value>
                <value>
                    <fullName>RCM5 (0%)</fullName>
                </value>
                <value>
                    <fullName>DIM5 (5%)</fullName>
                </value>
                <value>
                    <fullName>VATE (0%)</fullName>
                </value>
                <value>
                    <fullName>NOINP (0%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_GL_Offset__c</fullName>
        <label>GL Offset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A221</fullName>
                </value>
                <value>
                    <fullName>A223</fullName>
                </value>
                <value>
                    <fullName>A250</fullName>
                </value>
                <value>
                    <fullName>A398</fullName>
                </value>
                <value>
                    <fullName>A425</fullName>
                </value>
                <value>
                    <fullName>A450</fullName>
                </value>
                <value>
                    <fullName>A590</fullName>
                </value>
                <value>
                    <fullName>A613</fullName>
                </value>
                <value>
                    <fullName>A629</fullName>
                </value>
                <value>
                    <fullName>A641</fullName>
                </value>
                <value>
                    <fullName>A674</fullName>
                </value>
                <value>
                    <fullName>A676</fullName>
                </value>
                <value>
                    <fullName>A777</fullName>
                </value>
                <value>
                    <fullName>A865</fullName>
                </value>
                <value>
                    <fullName>A902</fullName>
                </value>
                <value>
                    <fullName>A903</fullName>
                </value>
                <value>
                    <fullName>NOAP</fullName>
                </value>
                <value>
                    <fullName>PRAP</fullName>
                </value>
                <value>
                    <fullName>NOCL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_GST_Amount__c</fullName>
        <label>GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Is_Accrual_PO__c</fullName>
        <formula>CONTAINS( ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.RecordType.DeveloperName ,&quot;Accrual&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Accrual PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Dcoument_Type__c</fullName>
        <label>JDE Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Document_Company__c</fullName>
        <label>JDE Document Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Document_Number__c</fullName>
        <label>JDE Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Transaction_Number__c</fullName>
        <label>JDE Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Tax_Explanation_Code__c</fullName>
        <formula>ASI_MFM_Tax_Code__r.ASI_MFM_Tax_Expl_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Explanation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_subLedger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Subledger_payLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Last_Payment_chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_MY_Allow_duplicate_Inv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow duplicate Inv. #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Offset_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offset Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POL_Receipt_Amount_Incl_Tax__c</fullName>
        <formula>ASI_MFM_POL_Receipt_Amount__c + ( ASI_MFM_POL_Receipt_Amount__c * ASI_MFM_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POL Receipt Amount (incl. Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POL_Receipt_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_Balance__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POSM: Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_Deposit__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POSM: Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount__c</fullName>
        <label>POL Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Currency__c</fullName>
        <label>POL Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Description__c</fullName>
        <label>POL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Item__c</fullName>
        <label>PO Line Item</label>
        <referenceTo>ASI_MFM_PO_Line_Item__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Remaining_Amount__c</fullName>
        <label>POL Remaining Amt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Receipt Item</label>
        <referenceTo>ASI_MFM_PO_Receipt_Item__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Remark__c</fullName>
        <label>PO Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount_in_Base_Currency__c</fullName>
        <label>Paid Amount in Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount_in_PO_Currency__c</fullName>
        <label>Paid Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Partial_Payment__c</fullName>
        <formula>IF(
AND( 
CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_TH&quot;),
ASI_MFM_Payment_Amount__c &lt;  ASI_MFM_PO_Line_Remaining_Amount__c,
ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c  =  False ,  ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c =  False ,
ASI_MFM_Complete_POL__c =  False
),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partial Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR (7 AND 8) OR 9</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Supplier, ASI KR Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HK Supplier, OPEX HK Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Supplier, HK Subleger</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>RM Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>GF Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier (SG), MY Supplier, PH Supplier, ASI JP Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TH Supplier, MFM TH Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_KOR_Customer_Code__c</field>
                <operation>contains</operation>
                <value>THS</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>OPEX SG Supplier, OPEX TH Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount_Distributor__c</fullName>
        <label>Payment Amount (Distributor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount_Net_of_Tax__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c -  ASI_MFM_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount Net of Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount_Ratio__c</fullName>
        <description>In order to make calculation more accurate, use amount field instead of amount net of tax</description>
        <formula>( ASI_MFM_Payment_Amount__c / ASI_MFM_Payment__r.ASI_MFM_Payment_Amount__c)</formula>
        <label>Payment Amount Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Item_Type__c</fullName>
        <label>Payment Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAP</fullName>
                </value>
                <value>
                    <fullName>RNV</fullName>
                </value>
                <value>
                    <fullName>FRE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Line_Item_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payment Line Item External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Line_Item_Finance_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_List_Item_Description__c</fullName>
        <label>Payment List Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Status__c</fullName>
        <formula>TEXT(ASI_MFM_Payment__r.ASI_MFM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Term__c</fullName>
        <formula>ASI_MFM_Payee__r.ASI_MFM_Payment_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Type__c</fullName>
        <formula>TEXT(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Phase_Code__c</fullName>
        <label>Phase Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A00</fullName>
                </value>
                <value>
                    <fullName>A01</fullName>
                </value>
                <value>
                    <fullName>A02</fullName>
                </value>
                <value>
                    <fullName>A03</fullName>
                </value>
                <value>
                    <fullName>A04</fullName>
                </value>
                <value>
                    <fullName>A05</fullName>
                </value>
                <value>
                    <fullName>A06</fullName>
                </value>
                <value>
                    <fullName>A07</fullName>
                </value>
                <value>
                    <fullName>A08</fullName>
                </value>
                <value>
                    <fullName>A09</fullName>
                </value>
                <value>
                    <fullName>A10</fullName>
                </value>
                <value>
                    <fullName>A11</fullName>
                </value>
                <value>
                    <fullName>A12</fullName>
                </value>
                <value>
                    <fullName>A13</fullName>
                </value>
                <value>
                    <fullName>A14</fullName>
                </value>
                <value>
                    <fullName>A15</fullName>
                </value>
                <value>
                    <fullName>A16</fullName>
                </value>
                <value>
                    <fullName>A17</fullName>
                </value>
                <value>
                    <fullName>A18</fullName>
                </value>
                <value>
                    <fullName>A19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanNameText__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanText__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Number</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Print_Sequence__c</fullName>
        <label>Print Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Promotion_Month__c</fullName>
        <label>Promotion Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_but_no_Paid__c</fullName>
        <description>for CN MFM payment input page display only</description>
        <label>Receipt but no Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Recharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SC_Subledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HK Subleger</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Line Items (Subledger)</relationshipLabel>
        <relationshipName>Payment_SC_Subledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Code__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_SKU_Code__r.ASI_MFM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU__c</fullName>
        <label>SKU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>